overflow fix

--- a/src/components/Widgets/Row.module.scss
+++ b/src/components/Widgets/Row.module.scss
@@ -35,6 +35,7 @@
     border-bottom: 2px solid transparent;
     height: 100%;
     flex: 1;
+    overflow: hidden;
 }
 
 .background.clickable {
